# oqto

./: dependencies.toml  justfile
.githooks/: pre-commit
.pi/todos/: 27e320f3-7af9-4fa7-b949-5c1e60e45a5e.json  2804c922-bc60-4199-96b8-700ce6aeb00a.json  3b893945-4f18-45ff-a587-6c707c71627e.json  4b1d308e-d00c-4795-88b6-cb2990ab4760.json  65af6361-ebb7-4ba4-978b-236a408df445.json  8b3c816a-98b4-4cd7-a7a1-b2365524cfae.json  8d265a24-228f-425b-bc9c-80ca1aae0d4e.json  bbfd7019-e09c-4900-9cb5-c9e334fe0b2e.json  dbcf1b4a-2d0f-42e8-9c37-4162131a9e85.json  f766ce95-27be-4707-8f84-5e6f9686e6a8.json  fd49dd9e-54e6-438d-bfa8-e02ace392023.json
.trx/: ISSUES.md
.trx/crdt/: octo-58xa.2.automerge  octo-58xa.3.automerge  octo-p3n2.7.automerge  octo-p3n2.8.automerge  oqto-00ay.automerge  oqto-14b1.5.automerge  oqto-14b1.6.automerge  oqto-14b1.7.automerge  oqto-23xh.automerge  oqto-dbbw.1.automerge  oqto-dbbw.3.automerge  oqto-dbbw.automerge  oqto-xrc6.1.automerge  oqto-xrc6.2.automerge  oqto-xrc6.3.automerge  oqto-xrc6.4.automerge  oqto-xrc6.5.automerge  oqto-xrc6.6.automerge  oqto-xrc6.7.automerge  oqto-xrc6.automerge  oqto-zkyq.automerge
backend/: Cargo.toml
backend/crates/oqto/: Cargo.toml
backend/crates/oqto-protocol/src/: commands.rs
backend/crates/oqto-usermgr/src/: main.rs
backend/crates/oqto/examples/: backend.config.schema.json  config.toml
backend/crates/oqto/migrations/: 20260227001_shared_workspaces.sql  20260228001_api_keys.sql
backend/crates/oqto/src/: lib.rs  main.rs
backend/crates/oqto/src/api/: routes.rs  state.rs  ws_multiplexed.rs
backend/crates/oqto/src/api/handlers/: admin.rs  api_keys.rs  chat.rs  mod.rs  oauth.rs  shared_workspaces.rs
backend/crates/oqto/src/api_keys/: mod.rs  models.rs  repository.rs
backend/crates/oqto/src/auth/: middleware.rs  mod.rs
backend/crates/oqto/src/eavs/: client.rs  types.rs
backend/crates/oqto/src/history/: canon.rs  mod.rs
backend/crates/oqto/src/local/: linux_users.rs
backend/crates/oqto/src/runner/: client.rs  pi_manager.rs  protocol.rs
backend/crates/oqto/src/shared_workspace/: mod.rs  models.rs  repository.rs  service.rs  users_md.rs
backend/crates/oqto/src/ws/: types.rs
deploy/: DEPLOY.md
deploy/systemd/: mmry-embeddings.config.toml
docs/: changes.md
docs/design/: oqto-serve.md  shared-workspaces.md
frontend/: package.json
frontend/apps/admin/: MetricsPanel.tsx
frontend/apps/settings/: ApiKeysPanel.tsx  index.tsx
frontend/components/: app-content-layout.tsx
frontend/components/contexts/: chat-context.tsx
frontend/components/settings/: SettingsEditor.tsx
frontend/features/admin/hooks/: useAdmin.ts
frontend/features/chat/components/: ChatView.tsx
frontend/features/chat/hooks/: message-utils.ts  types.ts  useChat.ts
frontend/features/sessions/: SessionScreen.tsx
frontend/features/sessions/utils/: fetchDefaultChatThreadedMessages.ts
frontend/hooks/: use-admin.ts
frontend/lib/: session-utils.ts  ws-manager.ts
frontend/lib/api/: api-keys.ts  chat.ts  index.ts  oauth.ts
frontend/messages/: de.json  en.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/routes/: AppShellRoute.tsx
frontend/src/routes/app-shell/: MobileMenu.tsx  SidebarSharedWorkspaces.tsx
scripts/: check-oqto-website.sh  copy_setup_schema.sh  deploy.sh  sync-oqto-website.sh  update-deps-github.sh  update-deps-precommit.sh
scripts/e2e/: proxmox-lxc-login.sh
scripts/setup/: 00-defaults.sh  07-shell-tools.sh  11-production.sh  13-mode-selection.sh  14-config.sh  18-services.sh  20-summary.sh  21-main.sh  oqto.setup.schema.json
