[package]
name = "app"
version = "0.3.17"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tauri-plugin-http = "2.5.5"
tauri-plugin-cors-fetch = "4.1.0"
tauri-plugin-websocket = "2.4.2"
tauri-plugin-fs = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
collapsible_if = "warn"
collapsible_else_if = "warn"
needless_return = "warn"
needless_borrow = "warn"
clone_on_copy = "warn"
single_char_add_str = "warn"
manual_strip = "warn"
manual_flatten = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_map_or = "warn"
single_match = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
