[package]
name = "oqto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI Agent Workspace Platform"

[[bin]]
name = "oqto"
path = "src/main.rs"

[[bin]]
name = "oqtoctl"
path = "src/ctl/main.rs"

[[bin]]
name = "oqto-runner"
path = "src/bin/oqto-runner.rs"

[[bin]]
name = "oqto-sandbox"
path = "src/bin/oqto-sandbox.rs"

[[bin]]
name = "pi-bridge"
path = "src/bin/pi-bridge.rs"

[lib]
name = "oqto"
path = "src/lib.rs"

[features]
default = []
desktop-notifications = ["notify-rust"]
integration-tests = []

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Configuration
config.workspace = true
dirs.workspace = true
shellexpand.workspace = true
toml.workspace = true

# Logging
env_logger.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyperlocal.workspace = true
http-body-util.workspace = true

# Database
sqlx.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
regex.workspace = true
hex.workspace = true

# Markdown rendering
comrak.workspace = true
syntect.workspace = true

# HTTP client
reqwest.workspace = true
reqwest-eventsource.workspace = true

# Concurrent data structures
dashmap.workspace = true

# File server (for Main Chat file access)
oqto-files = { path = "../oqto-files" }

# Authentication
jsonwebtoken.workspace = true
base64.workspace = true
bcrypt.workspace = true
nanoid.workspace = true
rand.workspace = true
once_cell.workspace = true
urlencoding.workspace = true
libc.workspace = true
sha2.workspace = true
rustix.workspace = true
fork.workspace = true
glob = "0.3.3"
fuser = "0.16.0"
notify-rust = { version = "4", optional = true }
notify.workspace = true

# TypeScript type generation
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }

# gRPC for hstry communication
tonic.workspace = true
prost.workspace = true

# Chat history (unified with hstry)
hstry-core.workspace = true

# Canonical protocol types
oqto-protocol = { path = "../oqto-protocol" }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
axum-test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
